<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_activity_avatar_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/avatar_profile" />

        <TextView
            android:id="@+id/profile_activity_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="-65dp"
            android:textSize="34sp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/profile_activity_fav_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="-2dp"
            android:layout_marginEnd="27.5dp"
            android:backgroundTint="#E2E2E2"
            app:backgroundTint="#A2A2A2"
            app:srcCompat="@drawable/ic_star_border_white_24dp" />

        <ImageButton
            android:id="@+id/profile_activity_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-300dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/previous_button"
            android:scaleX="1.3"
            android:scaleY="1.3"
            app:srcCompat="?attr/homeAsUpIndicator" />

        <LinearLayout
            android:elevation="2dp"
            android:layout_width="340dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="260dp"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profile_activity_name2_text"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:height="25dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/profile_activity_address_text"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/profile_activity_phone_text"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:height="20dp"
                android:layout_marginTop="25dp"/>

            <TextView
                android:id="@+id/profile_activity_website_text"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:height="20dp"
                android:layout_marginTop="25dp"/>

        </LinearLayout>

        <LinearLayout
            android:elevation="2dp"
            android:layout_width="340dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <TextView
                android:text="@string/aboutme"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/profile_activity_about_text"
                android:textSize="13sp"
                android:layout_marginTop="-10dp"
                android:layout_marginStart="20dp"
                android:layout_width="280dp"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>